--- a/protogeni/lib/GeniCM.pm.in
+++ b/protogeni/lib/GeniCM.pm.in
@@ -610,10 +610,6 @@ sub GetTicket($;$)
     my %lannodes = ();
     my @dealloc;
 
-    # Try to make the output format mimic the input, until everybody
-    # has migrated to URNs.
-    my $use_urns = 0; # +ve yes; -ve no; 0 guess
-
     #
     # If this is a ticket update, we want to seed the namemap with
     # existing nodes. This is cause the rspec might refer to wildcards
@@ -645,14 +641,6 @@ sub GetTicket($;$)
 	    my $manager_uuid  = $ref->{'component_manager_uuid'};
 	    my $node_nickname = $ref->{'virtual_id'} || $ref->{'nickname'};
 	    my $colocate      = $ref->{'colocate'} || $ref->{'phys_nickname'};
-
-	    if( defined( $manager_uuid ) ) {
-		if( GeniHRN::IsValid( $manager_uuid ) ) {
-		    $use_urns++;
-		} else {
-		    $use_urns--;
-		}
-	    }
 
 	    # Let remote nodes pass through.
 	    next
@@ -1101,9 +1089,11 @@ sub GetTicket($;$)
 	$exclusive = 0
 	    if (!defined($exclusive));
 	
+	$rspec->{'component_urn'} = GeniHRN::Generate( $OURDOMAIN, "node",
+						       $node->node_id() );
 	$rspec->{'component_uuid'} = $component_uuid;
-	$rspec->{'component_manager_uuid'} =
-	    $use_urns >= 0 ? $ENV{'MYURN'} : $ENV{'MYUUID'};
+	$rspec->{'component_manager_urn'} = $ENV{'MYURN'};
+	$rspec->{'component_manager_uuid'} = $ENV{'MYUUID'};
 
 	# Also update the virtexperiment table row.
 	$virtnode->fixed($node->node_id());
