Add more URN support: mainly on the clearinghouse side, and communication with the clearinghouse, and modifications to the certificate format (put the URN in subjectAltName and move any URL to a private OID under subjectInfoAccess).

--- a/protogeni/lib/GeniAggregate.pm.in
+++ b/protogeni/lib/GeniAggregate.pm.in
@@ -151,7 +151,9 @@ sub Create($$$$$$)
     my $idx = TBGetUniqueIndex('next_aggregate', 1);
 
     # Create a cert pair, which gives us a new uuid.
-    my $certificate = GeniCertificate->Create("aggregate", $hrn, $TBOPS);
+    $nickname =~ /[.](.+)$/;
+    my $urn = GeniHRN::Generate( "@OURDOMAIN@", "component", $1 );
+    my $certificate = GeniCertificate->Create("aggregate", $urn, $hrn, $TBOPS);
     if (!defined($certificate)) {
 	print STDERR "GeniAggregate::Create: ".
 	    "Could not generate new certificate and UUID for $hrn\n";
