--- a/ssl/syscert.cnf.in
+++ b/ssl/syscert.cnf.in
@@ -7,15 +7,13 @@ default_keyfile 	= privkey.pem
 distinguished_name	= req_distinguished_name
 req_extensions	        = request_extensions
 string_mask             = nombstr
+oid_section		= protogeni_oids
 
+[ protogeni_oids ]
+xmlrpc = 2.25.305821105408246119474742976030998643995
+
+# This will be appended to by mkusercert.
 [ request_extensions ]
 basicConstraints=critical,CA:TRUE
 subjectKeyIdentifier=hash
 subjectAltName=@req_altname
-
-# This will be appended to by mkusercert.
-[ req_distinguished_name ]
-C                      = @SSLCERT_COUNTRY@
-ST                     = @SSLCERT_STATE@
-L                      = @SSLCERT_LOCALITY@
-O                      = @SSLCERT_ORGNAME@
