--- a/account/mksyscert.in
+++ b/account/mksyscert.in
@@ -6,7 +6,7 @@
 #
 use strict;
 use English;
-use Getopt::Std;
+use Getopt::Long;
 
 #
 # Load the Testbed support stuff.
@@ -22,16 +22,27 @@ use libtestbed;
 sub usage()
 {
     print("Usage: mksyscert [-d] [-o file] [-p password] [-e email] ".
-	  "[-u url] [-a authority] <orgunit> [uuid]\n");
+	  "[-u url] [-i urn] [-k keyfile] [-a authority] <orgunit> [uuid]\n");
     exit(-1);
 }
-my $optlist  = "dp:o:ve:u:a:";
 my $debug    = 0;
 my $printcert= 0;
 my $outfile;
 my $password = "";
 my $email;
-my $url;
+my @urls;
+my $urn;
+my $oldkeyfile;
+my $authority;
+my %optlist = ( "debug" => \$debug,
+		"password=s" => \$password,
+		"output=s" => \$outfile,
+		"verbose" => \$printcert,
+		"email=s" => \$email,
+		"url=s" => \@urls,
+		"identifier=s" => \$urn,
+		"keyfile=s" => \$oldkeyfile,
+		"authority=s" => \$authority );
 
 #
 # Configure variables
@@ -96,12 +107,9 @@ sub fatal($);
 # Parse command arguments. Once we return from getopts, all that should be
 # left are the required arguments.
 #
-my %options = ();
-if (! getopts($optlist, \%options)) {
-    usage();
-}
-if (defined($options{"o"})) {
-    $outfile = $options{"o"};
+GetOptions( %optlist ) or usage();
+
+if( defined( $outfile ) ) {
     if ($outfile =~ /^([-\w\.\/]+)$/) {
 	$outfile = $1;
     }
@@ -110,14 +118,16 @@ if (defined($options{"o"})) {
     }
    
 }
-if (defined($options{"d"})) {
-    $debug = 1;
+if( defined( $oldkeyfile ) ) {
+    if ($oldkeyfile =~ /^([-\w\.\/]+)$/) {
+	$oldkeyfile = $1;
+    }
+    else {
+	die("Tainted arguments: $oldkeyfile\n");
+    }
+   
 }
-if (defined($options{"e"})) {
-    $email = $options{"e"};
-}
-if (defined($options{"a"})) {
-    my $authority = $options{"a"};
+if( defined( $authority ) ) {
     if ($authority =~ /^([-\w\.\/]+)$/) {
 	$authority = $1;
     }
@@ -127,15 +137,7 @@ if (defined($options{"a"})) {
     $certfile = $authority;
     $keyfile  = $authority;
 }
-if (defined($options{"u"})) {
-    $url = $options{"u"};
-}
-if (defined($options{"v"})) {
-    $printcert = 1;
-}
-if (defined($options{"p"})) {
-    $password = $options{"p"};
-
+if( $password ) {
     #
     # Make sure its all escaped since any printable char is allowed.
     #
@@ -209,28 +211,55 @@ system("cp -f $TEMPLATE syscert.cnf") == 0
 open(TEMP, ">>syscert.cnf")
     or fatal("Could not open $TEMPLATE for append: $!");
 
+if (@urls) {
+    my $count = 0;
+    foreach( @urls ) {
+	# unregistered OID 2.25.305821105408246119474742976030998643995
+	# (corresponding to UUID e61300a0-c4c5-11de-b14e-0002a5d5c51b)
+	# is used to indicate generic ProtoGENI XMLRPC servers.
+	print TEMP "authorityInfoAccess=2.25.305821105408246119474742976030998643995;URI:$_\n";
+    }
+}
+
+print TEMP "\n";
+print TEMP "[ req_distinguished_name ]\n";
+print TEMP "C\t\t=@SSLCERT_COUNTRY@\n";
+print TEMP "ST\t\t=@SSLCERT_STATE@\n";
+print TEMP "L\t\t=@SSLCERT_LOCALITY@\n";
+print TEMP "O\t\t=@SSLCERT_ORGNAME@\n";
 print TEMP "OU\t\t= \"$orgunit\"\n";
 print TEMP "CN\t\t= $uuid\n";
 print TEMP "emailAddress\t= $email\n";
 
 print TEMP "\n";
 print TEMP "[ req_altname ]\n";
-if (defined($url)) {
-    print TEMP "URI=$url\n\n";
-}
+print TEMP "URI=$urn\n" if defined( $urn );
+print TEMP "\n";
+
 close(TEMP)
     or fatal("Could not close syscert.cnf: $!");
 
 # Redirect output unless in debugging mode.
 my $outline = ($debug ? "" : ">/dev/null 2>&1");
 
-#
-# Create a client side private key and certificate request.
-#
-system("$OPENSSL req -text -new -config syscert.cnf ".
-       ($encrypted ? " -passout 'pass:${sh_password}' " : " -nodes ") .
-       " -keyout syscert_key.pem -out syscert_req.pem $outline") == 0
-    or fatal("Could not create certificate request");
+if( defined( $oldkeyfile ) ) {
+    #
+    # Create a certificate request using the specified key.
+    #
+    system("$OPENSSL req -text -new -key $oldkeyfile -config syscert.cnf ".
+	   ($encrypted ? " -passout 'pass:${sh_password}' " : " -nodes ") .
+	   " -out syscert_req.pem $outline") == 0
+	   or fatal("Could not create certificate request");
+    system("cp $oldkeyfile syscert_key.pem");
+} else {
+    #
+    # Create a client side private key and certificate request.
+    #
+    system("$OPENSSL req -text -new -config syscert.cnf ".
+	   ($encrypted ? " -passout 'pass:${sh_password}' " : " -nodes ") .
+	   " -keyout syscert_key.pem -out syscert_req.pem $outline") == 0
+	   or fatal("Could not create certificate request");
+}
 
 #
 # Sign the client cert request, creating a client certificate.
