--- a/protogeni/lib/GeniCertificate.pm.in
+++ b/protogeni/lib/GeniCertificate.pm.in
@@ -597,7 +597,7 @@ sub Create($$)
 
     my $self           = {};
     $self->{'CERT'}    = $query_result->fetchrow_hashref();
-    $self->{'CERT'}->{'uri'} = GeniHRN::Generate( $OURDOMAIN, "user",
+    $self->{'CERT'}->{'urn'} = GeniHRN::Generate( $OURDOMAIN, "user",
 						  $self->{'CERT'}->{'uid'} );
     $self->{'stored'}  = 1;
     bless($self, $class);
@@ -611,9 +611,10 @@ sub created($)		{ return field($_[0], "created"); }
 sub cert($)		{ return field($_[0], "cert"); }
 sub privkey($)		{ return field($_[0], "privkey"); }
 sub revoked($)		{ return field($_[0], "revoked"); }
-sub uri($)              { return field($_[0], "uri"); }
+sub uri($)              { return undef; }
+sub urn($)              { return field($_[0], "urn"); }
 sub URL($)              { return undef; }
-sub URN($)              { return field($_[0], "uri"); }
+sub URN($)              { return field($_[0], "urn"); }
 
 #
 # Need to add DN to the emulab table.
