--- a/protogeni/lib/GeniCredential.pm.in
+++ b/protogeni/lib/GeniCredential.pm.in
@@ -137,8 +137,8 @@ sub extensions($)	{ return field($_[0], "extensions"); }
 sub owner_cert($)	{ return $_[0]->{"owner_cert"}; }
 sub target_cert($)	{ return $_[0]->{"target_cert"}; }
 sub hrn($)		{ return $_[0]->{"target_cert"}->hrn(); }
-sub target_uri($)       { return $_[0]->{"target_cert"}->uri(); }
-sub owner_uri($)        { return $_[0]->{"owner_cert"}->uri(); }
+sub target_urn($)       { return $_[0]->{"target_cert"}->urn(); }
+sub owner_urn($)        { return $_[0]->{"owner_cert"}->urn(); }
 
 #
 # Stringify for output.
@@ -385,14 +385,14 @@ sub Sign($$)
 	return -1;
     }
     my $target_cert = $self->target_cert()->cert();
-    my $target_urn = $self->target_uuid();
+    my $target_urn = $self->target_urn();
 
     if (!defined($self->owner_cert())) {
 	print STDERR "No owner certificate attached to $self\n";
 	return -1;
     }
     my $owner_cert = $self->owner_cert()->cert();
-    my $owner_urn = $self->owner_uuid();
+    my $owner_urn = $self->owner_urn();
 
     # Credential expiration: hard-code to 24 hours from now.
     my @expt = gmtime( time() + 24 * 60 * 60 );
