Whoops.  register_resources also creates certificates, and I forgot to add URNs to those ones.

--- a/protogeni/scripts/register_resources.in
+++ b/protogeni/scripts/register_resources.in
@@ -52,6 +52,7 @@ require GeniDB;
 require GeniCertificate;
 require GeniComponent;
 require GeniRegistry;
+require GeniHRN;
 
 # List of nodes.
 my @nodes = ();
@@ -109,6 +110,9 @@ foreach my $node_id (@nodes) {
 	$certificate = GeniCertificate->Lookup($node->uuid());
 	if (!defined($certificate)) {
 	    $certificate = GeniCertificate->Create("Node",
+						   GeniHRN::Generate(
+						       $OURDOMAIN, "node",
+						       ${node_id} ),
 						   "${PGENIDOMAIN}.${node_id}",
 						   $TBOPS, $node->uuid(),
 						   $cmcertificate->URL());
